# course-on-collaboratory-software-development

./: .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
cheet-sheets/: docker.md  git.md  uv.md
reference/src/: index.html
search/: search_index.json
src/: calculator.py  utils.py
tests/: test_example.py
